// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagInput /> should match its disabled snapshot with disabled props 1`] = `
<div
  className="sc-bdVaJa fmSTsu k-Form-TagList k-Form-TagList--regular k-Form-TagList--orion k-Form-TagList--disabled"
  onClick={[Function]}
>
  <p
    className="k-u-a11y-visuallyHidden"
    id="test-slider-input-legend"
  >
    This list input is disabled.
  </p>
  <ul
    className="k-Form-TagList__list"
  >
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Black
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Black
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Blue
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Blue
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Green and magenta
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Green and magenta
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
  </ul>
  <ul
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions removals"
    className="k-u-a11y-visuallyHidden"
  >
    <li>
      Black
    </li>
    <li>
      Blue
    </li>
    <li>
      Green and magenta
    </li>
  </ul>
</div>
`;

exports[`<TagInput /> should match its disabled snapshot with objects on initialItemsList 1`] = `
<div
  className="sc-bdVaJa fmSTsu k-Form-TagList k-Form-TagList--regular k-Form-TagList--orion k-Form-TagList--disabled"
  onClick={[Function]}
>
  <p
    className="k-u-a11y-visuallyHidden"
    id="test-slider-input-legend"
  >
    This list input is disabled.
  </p>
  <ul
    className="k-Form-TagList__list"
  >
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem k-Form-TagList__tagItem--disabled"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Black
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Élément désactivé.
        </span>
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Black
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Blue
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Blue
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Green and magenta
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Green and magenta
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Green and magenta
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Green and magenta
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
  </ul>
  <ul
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions removals"
    className="k-u-a11y-visuallyHidden"
  >
    <li>
      Black
    </li>
    <li>
      Blue
    </li>
    <li>
      Green and magenta
    </li>
    <li>
      Green and magenta
    </li>
  </ul>
</div>
`;

exports[`<TagInput /> should match its snapshot 1`] = `
<div
  className="sc-bdVaJa fmSTsu k-Form-TagList k-Form-TagList--regular k-Form-TagList--orion"
  onClick={[Function]}
>
  <p
    className="k-u-a11y-visuallyHidden"
    id="test-slider-input-legend"
  >
    Press Enter or Comma to add an item.
  </p>
  <ul
    className="k-Form-TagList__list"
  >
    <li
      className="k-Form-TagList__item k-Form-TagList__inputItem"
    >
      <span
        aria-describedby="test-slider-input-legend"
        aria-placeholder=""
        className="k-Form-TagList__input"
        contentEditable={true}
        id="test-slider-input"
        onKeyDown={[Function]}
        role="textbox"
      />
    </li>
  </ul>
  <ul
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions removals"
    className="k-u-a11y-visuallyHidden"
  />
</div>
`;

exports[`<TagInput /> should match its snapshot with props 1`] = `
<div
  className="sc-bdVaJa fmSTsu k-Form-TagList k-Form-TagList--huge k-Form-TagList--orion"
  onClick={[Function]}
>
  <p
    className="k-u-a11y-visuallyHidden"
    id="test-slider-input-legend"
  >
    Press Enter or Comma to add an item.
  </p>
  <ul
    className="k-Form-TagList__list"
  >
    <li
      className="k-Form-TagList__item k-Form-TagList__inputItem"
    >
      <span
        aria-describedby="test-slider-input-legend"
        aria-placeholder="OK"
        className="k-Form-TagList__input"
        contentEditable={true}
        id="test-slider-input"
        onKeyDown={[Function]}
        role="textbox"
      />
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Black
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Black
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Blue
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Blue
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
    <li
      className="k-Form-TagList__item k-Form-TagList__tagItem"
    >
      <span
        className="k-Form-TagList__tag"
      >
        Green and magenta
      </span>
      <button
        className="k-Form-TagList__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="k-u-a11y-visuallyHidden"
        >
          Retirer 
          Green and magenta
           de la liste.
        </span>
        <svg
          fill="none"
          height="18"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.693 4.707a1 1 0 0 0-1.415 0L8.485 7.5 5.692 4.707a1 1 0 1 0-1.414 1.414l2.793 2.793-2.864 2.864a1 1 0 1 0 1.414 1.414l2.864-2.864 2.864 2.864a1 1 0 0 0 1.415-1.414L9.9 8.914l2.793-2.793a1 1 0 0 0 0-1.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </li>
  </ul>
  <ul
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions removals"
    className="k-u-a11y-visuallyHidden"
  >
    <li>
      Black
    </li>
    <li>
      Blue
    </li>
    <li>
      Green and magenta
    </li>
  </ul>
</div>
`;
